# InterviewSimulatorApp

./: .gitignore  README.md  apphost.cs  apphost.run.json  apphost.settings.json  aspire.config.json
src/backend/: auth_store.py  interview_data_store.py  main.py  pyproject.toml
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.css  App.tsx  api.ts  auth.tsx  authStorage.ts  index.css  main.tsx  types.ts
src/frontend/src/components/: InterviewSummaryPanel.tsx  ProtectedRoute.tsx
src/frontend/src/pages/: CoachChat.css  CoachChat.tsx  HomePage.tsx  InterviewDetailPage.tsx  InterviewFlow.css  InterviewHistoryPage.tsx  InterviewRunPage.tsx  InterviewSetupPage.tsx  InterviewSummaryPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/interview-data-mcp/: db.py  interviewcoach.db  main.py  models.py  pyproject.toml  repository.py
src/interview-prep-agents/: agents.py  chat_client.py  main.py  opentelemetry_patch.py  pyproject.toml  thread_router.py  upload_routes.py  upload_urls.py  workflow.py
